tests/NormalTests/paczka1/fuzzy1/82923022.err
Error in line 11: 26ib A921 31,3
Error in line 18: D5PnLii S18 60,5
Error in line 19: D5PnLii A921 25,1
Error in line 31: D5PnLii S263 85,3
Error in line 36: ukF4H4q S263 42,7
Error in line 37: 26ib A295 12,1
